upto Skill Section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" />
         <title>Akhilesh</title>
         <!-- Google Fonts -->
         <style>
@@ -14,16 +14,18 @@
         
     </head>
 
+<!-- ====================================NAVBAR=================================== -->
+
     <body>
         <div id="portfolioBody">
             <div id="navbar">
                 <div id="navContainer">
-                    <p>Akhilesh</p>
+                    <p id="myName">Akhilesh</p>
                     <div id="navList">
                         <p><i id="toggleButton" class="fa-solid fa-circle-half-stroke"></i></p>
-                        <a href="#" class="navlink">Home</a>
-                        <a href="#about" class="navlink">About</a>
-                        <a href="#skills" class="navlink">Skills</a>
+                        <a href="#" class="navlink"><span><i class="fa-solid fa-house"></i> </span><span class="navText">Home</span></a>
+                        <a href="#about" class="navlink"><span><i class="fa-solid fa-address-card"></i> </span ><span class="navText">About</span></a>
+                        <a href="#skills" class="navlink"><span><i class="fa-solid fa-code"></i> </span><span class="navText">Skills</span></a>
                     </div>
                 </div>
             </div>
@@ -147,3 +149,4 @@
         <script src="script.js"></script>
     </body>
 </html>
+
